@@ -1184,10 +1184,9 @@ sub update {
   # Options
   my $param = @_ % 2 ? shift : undef;
   my %opt = @_;
-  _deprecate('0.24', "update param option is DEPRECATED!") if $opt{param};
   _deprecate('0.24', "update method where_param option is DEPRECATED!")
     if $opt{where_param};
-  $param ||= $opt{param} || {};
+  $param ||= {};
   
   # Don't allow update all rows
   croak qq{update method where option must be specified } . _subname
